tests/interpreter/pass/008-xor.hyg
assert(true xor false);
assert(false xor true)