tests/interpreter/fail/004-xor.hyg
assert(true xor true);
assert(false xor false)